Committing code of making friends of elements of disjoint set